src/css/01-base.css
/**********************************************************************************
 * Reset styles
 **********************************************************************************/
.hidden {display: none !important;}
.menu-closed {
	height: 0;
	overflow: hidden;
	padding: 0;
}

img {border: 0 none;}
body {
	font-family: "Noto Sans", sans-serif;
}


header .logo-text {font-family: 'Griffy', cursive;}

.content article {text-align: justify;}

hr {
	border-bottom-style: none;
	border-top-style: solid;
	height: 0;
	margin: 1em 0;
}

footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet */

/**********************************************************************************
 * Components
 **********************************************************************************/
.ajax-loader {
	align-items: center;

	border: 3px double;
	border-radius: 24px 0 0 24px;
	border-right: none;

	display: flex;
	height: 2.5em;
	opacity: 0;
	padding: 8px 16px;
	position: fixed;
	right: 0;
	width: 0;
}

.ajax-loader-spinning {
	opacity: 0.9;
}

.ajax-loader .spinner {
	background: center no-repeat url(img/vrtelejka-000.gif);
	background-size: contain;
	display: flex;
	height: 2.4em;
	margin-right: 5px;
	vertical-align: middle;
	width: 2.4em;
}

.menu li, .content-tune .tune-links li, .breadcrumbs li {list-style-type: none;}
.fa-chevron-down, .fa-chevron-up {vertical-align: middle;}

/*==============  Buttons ==============*/
.menu .menu-item, footer a, .player .player-button {
	text-decoration: none;
}

.header-container .header-button, .menu .menu-item, .player .player-button {
	border: none;
	display: inline-block;
	padding: 0;
}

.toggle-language-label {
	display: none;
}

.button-scroll-to-top {
	border-radius: 1.5em;
	cursor: pointer;
	font-size: 2.75em;
	font-weight: bold;
	height: 1.4em;
	position: fixed;
	text-align: center;
	width: 1.4em;
}


/*==============  Breadcrumbs ==============*/
.breadcrumbs ul {
	display: inline-block;
	font-size: 0.95em;
	margin: 0 6px;
	padding: 0;
	text-align: left;
}
.breadcrumbs li {display: inline;}
.breadcrumbs li:not(:first-child)::before {content: " / ";}
.breadcrumbs li .fas {padding-right: 0.25em;}

/*==============  Menus ==============*/
.menu > ul {
	margin: 0;
	padding: 0 0 12px 0;
}

.menu li > .menu-item {
	cursor: pointer;
	padding: 12px 8px;
	text-align: left;
}
.menu li > .menu-item .icon {margin: 0 10px 0 6px;}
.menu-item .fa-chevron-down, .menu-item .fa-chevron-up {font-size: 0.5em;}

.menu-music li:first-child .menu-item {padding-top: 0;}


/*============== Language Menu ==============*/
.menu-language-choice .flag {
	background: url(img/znamena.png) no-repeat;
	border-radius: 3px;
	display: inline-block;
	height: 18px;
	vertical-align: middle;
	width: 24px;
}

.menu-language-choice .flag-bg{background-position:0 0;}
.menu-language-choice .flag-en{background-position:-48px 0;}
.menu-language-choice .flag-fr{background-position:-24px 0;}


/*============== Playlist Menu ==============*/
.menu-playlist-wrapper {position: fixed;}

.menu-playlist-wrapper .playlist-search {display: flex;}
.menu-playlist-wrapper .playlist-search input {
	border: none;
	display: flex;
	flex: auto;
}
.menu-playlist-wrapper .playlist-search input[disabled] {display: none;}

.menu-playlist {
	border-radius: 10px;
	margin: 12px 6px 0 0;
	max-height: 250px; /* Legacy browsers only. It is overridden with "modern" rules in screen size files. */
	overflow-y: auto;
}
.menu-playlist .playlist-unavailable-label {display: none; margin: 12px;}
.menu-playlist > ul {padding: 0 5px;}
.menu-playlist .menu-item {
	cursor: pointer;
	display: flex;
}
.menu-playlist .playlist-title {flex: auto;}

.playlist-unavailable .playlist-unavailable-label {display: block;}
.playlist-unavailable ul {display: none;}

/*==============  Player ==============*/
.player {
	align-items: center;
	bottom: 0;
	display: flex;
	height: 2.5em;
	position: fixed;
	width: 100%;
}

.player audio {display: none;}

.player .track-progress-bar-container, .player .player-controls {
	display: inline-flex;
}

.player .track-title {cursor: pointer;}
.player .track-title, .player .loading-indicator {
	flex: auto;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.player .loading-indicator {display: none;}
.player .player-loading-spinner {
	align-self: center;
	background: center no-repeat url(/static/img/vrtelejka-333.gif);
	background-size: contain;
	display: inline-flex;
	height: 1.15em;
	margin: 0 0.25em 0 0;
	width: 1.15em;
}

.player .time-balloon {display: none;}
.player:not(.player-loading):not(.player-error) .track-progress-bar:not(.player-error):hover .time-balloon {
	display: block;
}

.player .track-progress-bar-container {padding: 0 10px;}
.player .track-progress-bar {
	cursor: pointer;
	display: inline-block;
}

.player .track-progress, .player .track-progress-bar-background {
	border-radius: inherit;
}

.player:not(.player-error) .player-controls .disabled {cursor: default;} /* disabled controls */

.player-loading .loading-indicator,
.player-loading .track-progress-bar-container,
.player-loading .track-progress-bar {
	cursor: wait;
}
.player-loading .loading-indicator {display: flex;}
.player-loading .track-title {display: none;}

.player-error .player-controls .disabled,
.player-error .track-progress-bar {cursor: not-allowed;}

/*==============  Footer ==============*/
footer {
	align-items: center;
	display: flex;
	height: 2.5em;
	margin-bottom: 2.5em; /* make room for the player */
}

footer .social {
	align-items: center;
	display: flex;
	flex: auto;
}

footer .copyright {
	display: flex;
	justify-content: flex-end;
}
footer .copyright-copy, footer .copyright-last-year {
	margin-right: 3px;
}


/**********************************************************************************
 * Pages styles
 **********************************************************************************/
.content .content-heading {
	border-bottom-right-radius: 0.8em;
	overflow: hidden;
	padding: 0 0.5em 0.2em 0.1em;
	text-overflow: ellipsis;
}

.content-404 {text-align: center;}


/*============== Lyrics ==============*/
.content-lyrics .lyrics-wrapper {
	margin: 0 0.4em;
	text-align: center;
}
.content-lyrics .english-translation-link {
	display: block;
	margin: 1em;
}
.content-lyrics .lyrics {
	display: inline-block;
	text-align: left;
}

/*============== Home ==============*/
.content-home article .news-title {margin-top: 1.5em;}
.content-home .news a {font-style: italic;}


/*============== Tune ==============*/
.content-tune .tune-title {
	font-weight: normal;
	margin: 0.4em auto;
}
.content-tune .tune-title a {text-decoration: none;}
.content-tune .tune-release-info {margin: 0.5em 0.5em 1.33em;}
.content-tune .tune-original-title {
	font-weight: normal;
	margin-top: 1px;
}

.content-tune .tune-links {
	margin: 0;
	padding: 0 5px;
}

.content-tune .tune-links li {
	display: inline-block;
	margin-bottom: 10px;
}

.content-tune .tune-links a {
	border-bottom-left-radius: 10px;
	cursor: pointer;
	padding: 5px 10px;
	text-decoration: none;
}
.content-tune .tune-links .fas, .content-tune .tune-links .fab {
	font-size: 1.3em;
	margin: 5px;
}


/*============== Discography ==============*/
.content-discography .album-title {
	margin: 0;
	text-align: center;
}

.content-discography .album-contents-wrapper {display: flex;}

.content-discography .album-cover {
	height: 8.5em;
	margin-right: 1.33em;
	margin-top: 1.5em;
	overflow-y: hidden;
	width: 11em;
}
.content-discography .album-cover .fas {
	font-size: 11em;
}

.content-discography .album-tracks {
	flex: auto;
	padding-left: 20px;
	text-align: left;
}
.content-discography .album-tracks li {margin: 4px 0;}
.content-discography .album-tracks .track-title {
	display: inline-block;
	vertical-align: top;
	width: calc(100% - 50px);
}
.content-discography .album-tracks .track-length {
	display: inline-block;
	text-align: right;
	width: 45px;
}
.content-discography .album-tracks .album-duration-container {
	margin: 0 0 10px 0;
	text-align: right;
}
.content-discography .album-tracks .album-duration-container .album-duration-separator {
	border-top: 1px solid;
	margin-left: 37px;
	padding: 6px 1px 0 0;
}
.content-discography .album-tracks .album-duration-container .album-duration-label {
	margin-right: 5px;
}

.content-discography .license-notice {padding: 0 10px;}

/*============== Version Info ==============*/
.content-version .ascii-logo {
	display: inline-block;
	font-weight: bold;
	text-align: left;
	vertical-align: top;
}

.content-version .version-info {display: inline-block;}
.version-info .version-info-table, .version-info .content-heading {text-align: left;}
.version-info .version-info-left {
	font-weight: bold;
	padding: 0 0.5em;
}



/**********************************************************************************
 * Hide the player by default. JS will undo this on supported browsers
 **********************************************************************************/
.unsupported-player .player,
.unsupported-player .menu-playlist-wrapper,
.unsupported-player .content-tune .tune-play {
	display: none;
}

.unsupported-player footer {
	margin-bottom: 0;
	margin-top: 3em;
}

